--- a/App/.env
+++ b/App/.env
@@ -1,1 +1,1 @@
-DATABASE URL=postgres://username:password@host address:port/database name
+DATABASE_URL=postgres://postgres:password@localhost:5432/postgres
